Changed Header routerLink

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -6,20 +6,18 @@
 
 .nav {
   width: 100%;
-}
-.navigation-main a {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  width: 100%;
-  text-align: right;
+  height: 50%;
 }
 .navigation-main a {
   color: #fff;
   text-decoration: none;
   display: block;
   white-space: nowrap;
-  padding: 10px 15px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 100%;
+  text-align: right;
 }
 
 .navigation-main a:hover {
