--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,10 +13,10 @@
   <nav class="nav">
     <ul class="navigation-main">
       <h4>Fniding Falcone</h4>
-      <li class="current-menu-item"><a routerLink="">Home</a></li>
-      <li class=""><a routerLink="">Reset</a></li>
-      <li><a routerLink="">Find</a></li>
-      <li><a routerLink="">Result</a></li>
+      <li class="current-menu-item"><a routerLink="home">Home</a></li>
+      <li class=""><a routerLink="home">Reset</a></li>
+      <li><a routerLink="findfalcon">Find</a></li>
+      <li><a routerLink="result">Result</a></li>
     </ul>
   </nav>
 </header>
