--- a/src/app/components/findfalcon/findfalcon.component.css
+++ b/src/app/components/findfalcon/findfalcon.component.css
@@ -24,9 +24,13 @@
 }
 
 .allignCenter {
+    color: #fff;
     display:inline-flex;
     width: 100%;
     text-align: center;
     align-items: center;
     align-content: center;
+}
+h4 {
+  color: #fff;
 }
