--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,11 +12,11 @@
 <header class="header">
   <nav class="nav">
     <ul class="navigation-main">
-      <h4>Fniding Falcon</h4>
-      <li class="current-menu-item"><a routerLink="home">Home</a></li>
-      <li class=""><a routerLink="home">Reset</a></li>
-      <li><a routerLink="findfalcon">Find</a></li>
+      <h4>Finding Falcone</h4>
       <li><a routerLink="result">Result</a></li>
+      <li><a routerLink="home">Reset</a></li>
+      <li><a routerLink="findfalcon">Find</a></li>
+      <li class="current-menu-item"><a routerLink="home">Home</a></li>
     </ul>
   </nav>
 </header>
