css changes added background

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 body {
-  background-color: darkslategrey;
+  background-image: url("https://i.pinimg.com/originals/29/6f/f9/296ff9a5c87b06ba6c153f4592d703fa.jpg");
 }
 p {
   color: #fff;
