--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -33,7 +33,7 @@
   /* position: absolute; */
   text-align: center;
   /* left: -999em; */
-  background-color: #181818;
+  background-color: #18181839;
 }
 
 .navigation-main li {
