--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
                   she will
                   be exiled for another 15 years....
               </p>
-              <a class="btn btn-large btn-primary" routerLink="/findfalcon"> Help King Shan find Al Falcone </a>
+              <a class="button3" routerLink="/findfalcon">Find Falcone</a>
          
           
       </div>
