--- a/src/app/components/findfalcon/findfalcon.component.css
+++ b/src/app/components/findfalcon/findfalcon.component.css
@@ -1,5 +1,10 @@
+.content {
+  background-size: cover;
+  /* background-image: url("https://cdn.wallpapersafari.com/62/33/5e0nIt.jpg"); */
+}
 .planetGroup {
     left: 15%;
+    /* text-shadow: 2px 2px 4px #000000; */
     /* float: left; */
     margin-bottom: 100px;
     padding: 15px 20px 15px 20px;
@@ -15,12 +20,14 @@
 }
 
 .timeTaken {
+    text-shadow: 2px 2px 4px #000000;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     /* float: right; */
     padding: 2px;
     position: relative;
+    color: #ffffff;
     display: inline-block;
-    /* margin-right: 130px; */
+    margin-left: 330px;
 }
 
 .allignCenter {
@@ -32,5 +39,6 @@
     align-content: center;
 }
 h4 {
-  color: #fff;
+    text-shadow: 2px 2px 4px #000000;
+    color: #fff;
 }
