--- a/src/app/components/planet/planet.component.css
+++ b/src/app/components/planet/planet.component.css
@@ -6,22 +6,42 @@
     align-content: center;
 }
 
-.label {
+label {
+    text-shadow: 2px 2px 4px #000000;
+    color :rgb(36, 103, 161);
     display:block;
-    padding: 15px 0x 15px 0px;
-    block-size: 25px;
+    padding: 2.5px 1px 5px 1px;
+    block-size: 15px;
 }
 .selectOption {
+  -webkit-appearance: none;
+  appearance: none;
+  background: none;
+  /* background-color: #00000000; */
   text-align: center;  
 }
 .planetSelect {
+  text-shadow: 2px 2px 4px #000000;
+  display: inline-block;
+  transition: all 0.2s;
+  /* border:0.05em solid #FFFFFF; */
+  padding:0.3em 1.2em;
+  margin:0 0.3em 0.3em 0;
+  /* border-radius:2em; */
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  /* background: #c04545; */
+  appearance: none;
+  border-color: rgb(222, 226, 230); /*rgb(36, 103, 161)*/
+  color: #ffffff;
+  background-color: #2c2c33;
   text-align-last: center;
   align-content: center;
   text-align: center;
-  width: 105px;
-  display:block;
+  width: 112px;
+  /* display:block; */
   block-size: auto;
-  position: relative;
+  /* position: relative; */
 }
 
 .planetGroup {
