--- a/src/app/components/findfalcon/findfalcon.component.css
+++ b/src/app/components/findfalcon/findfalcon.component.css
@@ -6,16 +6,20 @@
     left: 15%;
     /* text-shadow: 2px 2px 4px #000000; */
     /* float: left; */
-    margin-bottom: 100px;
-    padding: 15px 20px 15px 20px;
+    margin: 10px 20px 100px 20px;
+    padding: 15px 43px;
     position: relative;
     display: inline-block;
 }
 
 .vehicleSelect {
+    display: block;
+    height: 125px;
+    width: 200px;
     left: 15%;
     float: left;
-    padding: 9px 35px 9px 35px;
+    padding: 2px 10px;
+    margin: 5px 15px;
     position: relative;
 }
 
