--- a/src/app/components/planet/planet.component.css
+++ b/src/app/components/planet/planet.component.css
@@ -11,7 +11,9 @@ label {
     color :rgb(36, 103, 161);
     display:block;
     padding: 2.5px 1px 5px 1px;
-    block-size: 15px;
+    width: 120px;
+    height: 25px;
+    /* block-size: 15px; */
 }
 .selectOption {
   -webkit-appearance: none;
