--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,7 +14,7 @@
     <ul class="navigation-main">
       <h4>Finding Falcone</h4>
       <li><a routerLink="result">Result</a></li>
-      <li><a routerLink="home">Reset</a></li>
+      <li><a class="dudUrl" (click)="reset()">Reset</a></li>
       <li><a routerLink="findfalcon">Find</a></li>
       <li class="current-menu-item"><a routerLink="home">Home</a></li>
     </ul>
