--- a/src/app/components/findfalcon/findfalcon.component.html
+++ b/src/app/components/findfalcon/findfalcon.component.html
@@ -1,6 +1,6 @@
 <div class="content">
   <p style="text-align: justify; color:#ffffff; padding: 10px; 20px; line-height: 130%; font-size: 120%;">
-      King Shan has received intelligence that Al Falcone is in hiding in one of these 6 planets - DonLon,
+      King Shan has received intelligence that Al Falcone is in hiding in one of these 6 planets - Donlon,
       Enchai,
       Jebing, Sapir, Lerbin & Pingasor. However he has limited resources at his disposal & can send his
       army to
