--- a/src/app/components/findfalcon/findfalcon.component.html
+++ b/src/app/components/findfalcon/findfalcon.component.html
@@ -35,4 +35,17 @@
   <div style="text-align: center; align-items: center; align-content: center;">
     <button class="button3" [disabled]="!isReadyForExpedition" (click)="getResult()">Send Army!</button>
   </div>
+
+  <div *ngIf="planetList.length!=0||vehicleList.length!=0" style="text-align: center;">
+    <div style="display: inline-block;" *ngFor="let planet of planetList">
+      <h5>Planet: {{planet.name}}</h5>
+      <h5>Distance to Planet: {{planet.distance}}</h5>
+    </div>
+    <div style="display: inline-block;" *ngFor="let vehicle of vehicleList">
+      <h5>Vehicle: {{vehicle.name}}</h5>
+      <h5>Available Units of Vehicles of this type {{vehicle.totalNumber}}</h5>
+      <h5>Cover Maximum Distance of {{vehicle.maxDistance}} Megamiles</h5>
+      <h5>Maximum Traveling Speed {{vehicle.speed} Megamiles/Hour}</h5>
+    </div>
+  </div>
 </div>
