--- a/src/app/components/findfalcon/findfalcon.component.css
+++ b/src/app/components/findfalcon/findfalcon.component.css
@@ -13,24 +13,29 @@
 }
 
 .vehicleSelect {
-    display: block;
+  text-align: left;
+    display: inline-block;
     height: 125px;
     width: 200px;
-    left: 15%;
-    float: left;
+    /* left: 15%; */
+    /* float: left; */
     padding: 2px 10px;
     margin: 5px 15px;
     position: relative;
 }
 
 .timeTaken {
+  /* float:right; */
+  /* flex: 0 0 65%; */
+  text-align: center;
     text-shadow: 2px 2px 4px #000000;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     /* float: right; */
     padding: 2px;
-    position: relative;
+    /* position: relative; */
     color: #ffffff;
-    display: inline-block;
+    /* align-content: center; */
+    /* display: inline-block; */
     /* margin-left: 330px; */
 }
 
