--- a/src/app/components/findfalcon/findfalcon.component.html
+++ b/src/app/components/findfalcon/findfalcon.component.html
@@ -7,30 +7,29 @@
       only 4 of these planets. Your task is to help King Shan find Al Falcone.
   </p>
 
-  <div>
-    <h4>Select the Planets where you want to send the army : </h4>
-  </div>
-  <div style="display: block; width:100%; text-align:center;;">
+<div style="display: flex; width:100%; ">
+  <div style="display: block; width:90%; text-align:center;">
+    <div>
+      <h4>Select the Planets where you want to send the army : </h4>
+    </div>
     <div style="display: inline-block;">
       <div class="planetGroup" *ngFor="let planetId of noOfDestinations">
         <app-planet [id] = "planetId" [unselectedPlanets] = "unselectedPlanets" (onSelectPlanet)="onSelectPlanet($event)"></app-planet>
       </div>
     </div>
-    <div class="timeTaken" *ngIf="timeTaken!=0">
-      Time Taken : {{timeTaken}}
-    </div>
-
-  </div>
-
-  <div  *ngIf="anyPlanetSelected()">
-    <h4>Select any four Vehicles in which you want to send the army : </h4>
-    <div style="display: inline-block;">
-      <div *ngFor="let vehicleId of noOfDestinations" class="vehicleSelect">
-        <app-vehicle *ngIf="selectedPlanetsId[vehicleId] !== -1" [id] = "vehicleId" [unselectedVehicles] = "unselectedVehicles" [DisabledVehicles] = "disabledVehiclesList[vehicleId]" (onSelectVehicle)="onSelectVehicle($event)"></app-vehicle>
+    <div  *ngIf="anyPlanetSelected()">
+      <h4>Select any four Vehicles in which you want to send the army : </h4>
+      <div style="display: inline-block;">
+        <div *ngFor="let vehicleId of noOfDestinations" class="vehicleSelect">
+          <app-vehicle *ngIf="selectedPlanetsId[vehicleId] !== -1" [id] = "vehicleId" [unselectedVehicles] = "unselectedVehicles" [DisabledVehicles] = "disabledVehiclesList[vehicleId]" (onSelectVehicle)="onSelectVehicle($event)"></app-vehicle>
+        </div>
       </div>
     </div>
   </div>
-
+  <div class="timeTaken" *ngIf="timeTaken!=0">
+    Time Taken : {{timeTaken}}
+  </div>
+</div>
   
   <div style="text-align: center; align-items: center; align-content: center;">
     <button class="button3" [disabled]="!isReadyForExpedition" (click)="getResult()">Send Army!</button>
@@ -38,16 +37,15 @@
 
 
 
-  <div *ngIf="planetList.length!=0||vehicleList.length!=0" style="color:#ffffff; align-items:center;">
-    <div style="display: inline-block; color:#ffffff; text-align:center; align-items: center; align-content:center; padding: 5px 15px; left: 40%;">
-      <div style="display:block text-align: center; float:left; align-items: center; align-content:center; padding: 5px 25px;" *ngFor="let planet of planetList">
+  <div *ngIf="planetList.length!=0||vehicleList.length!=0" style="text-align: center; width: 100%;">
+    <div>
+      <div style="display:inline-block; text-align: center;  padding: 5px 25px; color:#ffffff;" *ngFor="let planet of planetList">
         <h5>Planet: {{planet.name}}</h5>
         <h5>Distance to Planet: {{planet.distance}}</h5>
       </div>
     </div>
-    <br>
-    <div style="display: inline-block">
-      <div style="display: block; color:#ffffff; float:left;text-align:center; align-items: center; align-content:center; padding: 5px 25px;" *ngFor="let vehicle of vehicleList">
+    <div>
+      <div style="display: inline-block; color:#ffffff; text-align:center; padding: 5px 25px;" *ngFor="let vehicle of vehicleList">
         <h5>Vehicle: {{vehicle.name}}</h5>
         <h5>Available Units of Vehicles of this type {{vehicle.totalNumber}}</h5>
         <h5>Can cover Maximum Distance of {{vehicle.maxDistance}} Megamiles</h5>
