--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,15 @@ body {
   background-color: rgb(17, 17, 17);
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE and Edge */
+body {
+  -ms-overflow-style: none;
+}
+
 .dudURL{
   cursor: pointer;
 }
