--- a/src/app/components/findfalcon/findfalcon.component.css
+++ b/src/app/components/findfalcon/findfalcon.component.css
@@ -25,8 +25,9 @@
 }
 
 .timeTaken {
+  /* display: flex; */
   /* float:right; */
-  /* flex: 0 0 65%; */
+  flex: auto;
   text-align: center;
     text-shadow: 2px 2px 4px #000000;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -34,6 +35,9 @@
     padding: 2px;
     /* position: relative; */
     color: #ffffff;
+    /* width: 175px; */
+    /* height: 175px; */
+    line-height: auto;
     /* align-content: center; */
     /* display: inline-block; */
     /* margin-left: 330px; */
