--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,17 +1,29 @@
 .header {
-  background-color: #14547400;
+  color: rgb(36, 103, 161);
+  width: 100%;
+  top: 5px;
+  background-color: #145474;
   display: flex;
   align-items: center;
+  flex-direction: row;
+  /* align-items: center; */
+  position: sticky;
+
 }
 
 .nav {
-  width: 100%;
+  background: #86060672;
+  /* top: 0; */
+  /* width: 100%; */
   /* height: 50%; */
+  display: flex;
+  width: 100%;
+  align-items: center;
 }
 .navigation-main a {
   color: #fff;
   text-decoration: none;
-  display: block;
+  /* display: block; */
   white-space: nowrap;
   margin: 2px 2px 2px 2px;
   padding: 2px 2px 2px 2px;
@@ -25,15 +37,18 @@
 }
 
 .navigation-main {
+  /* align-items: right; */
+  /* float: right; */
   overflow: hidden;
-  /* display: inline-block; */
   margin: 0px;
   padding: 0px 10px;
   list-style: none;
   /* position: absolute; */
-  text-align: center;
+  /* text-align: center; */
   /* left: -999em; */
   background-color: #18181839;
+  display: inline-block;
+  float: right;
 }
 
 .navigation-main li {
@@ -49,8 +64,10 @@
 }
 .navigation-main h4 {
     color: rgb(36, 103, 161);
-  /* display: inline-block; */
-  float: left;
+    padding: 5px 10px;
+    margin: 5px 10px;
+    display: inline-block;
+  /* float: left; */
   position: relative;
-  text-align: center;  
+  /* text-align: center;   */
 }
