--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,11 @@
 /* Add application styles & imports to this file! */
 body {
   background-size: cover;
-  background-image: url("https://i.pinimg.com/originals/29/6f/f9/296ff9a5c87b06ba6c153f4592d703fa.jpg");
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
   background-color: rgb(17, 17, 17);
+  background-repeat: no-repeat;
+  height: 100vh;
+  background-position: center center;
 }
 
 body::-webkit-scrollbar {
