minor find fixes and background position changed to fixed

--- a/src/app/components/findfalcon/findfalcon.component.css
+++ b/src/app/components/findfalcon/findfalcon.component.css
@@ -35,7 +35,7 @@
     padding: 2px;
     /* position: relative; */
     color: #ffffff;
-    /* width: 175px; */
+    width: 125px;
     /* height: 175px; */
     line-height: auto;
     /* align-content: center; */
