--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@ body {
   background-repeat: no-repeat;
   height: 100vh;
   background-position: center center;
+  background-attachment: fixed;
 }
 
 body::-webkit-scrollbar {
