--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,24 +1,17 @@
-<div class="row">
-  <div class="col-lg-12 spacing-20 intro">
+<!-- <div class="row"> -->
       <!-- <img src="../../../assets/images/king_shan.jpg" alt="king shan" /> -->
 
-      <h1>Welcome to the planet of Lengaburu</h1>
-      <br>
-      <div class="container">
-          
-              <p>
-                  After the recent war with neighbouring planet Falicornia, King Shan has exiled the Queen of
-                  Falicornia for
-                  15 years. Queen Al Falcone is now in hiding.
-                  But if King Shan can find her before the years are up,
-                  she will
-                  be exiled for another 15 years....
-              </p>
-              <a class="button3" routerLink="/findfalcon">Find Falcone</a>
-         
-          
+  <h1>Welcome to the planet of Lengaburu</h1>
+  <div style="align:center; aligm-content:center; top:34%; width:70%; margin:auto;">
+      <div style="align:center">
+        <p>After the recent war with neighbouring planet Falicornia, King Shan has exiled the Queen of
+          Falicornia for 15 years. Queen Al Falcone is now in hiding.
+          But if King Shan can find her before the years are up,
+          she will be exiled for another 15 years....
+        </p>
+        <div style="text-align:right;">
+          <a class="button3" routerLink="/findfalcon">Find Falcone</a>
+        </div>
       </div>
-
-
   </div>
-</div>
+<!-- </div> -->
