--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -24,7 +24,8 @@
   align-items: center;
   flex-direction: row;
   	/* align-items: center; */
-	justify-content: space-around;
+	justify-content: space-between;
+  padding: 0 1rem;
 	flex-wrap: wrap;
 }
 .navigation-main a {
