--- a/src/app/components/findfalcon/findfalcon.component.html
+++ b/src/app/components/findfalcon/findfalcon.component.html
@@ -41,10 +41,10 @@
   <div *ngIf="planetList.length!=0||vehicleList.length!=0" style="text-align: center; width: 100%;">
     <div>
       <!-- <div style="display:inline-block; text-align: center;  padding: 5px 25px; color:#ffffff;" *ngFor="let planet of planetList"> -->
-        <table style="color:#ffffff;">
+        <table style="color:#ffffff; width:100%;">
           <tr>
             <th>Planet</th>
-            <td *ngFor="let planet of planetList">{{planet.name}}</td>
+            <td *ngFor="let planet of planetList"><img [src]="planetImage[planet.id]" width="120"/><br>{{planet.name}}</td>
           </tr>
           <tr>
             <th>Distance to Planet</th>
@@ -56,10 +56,10 @@
     <br>
     <div>
       <!-- <div style="display: inline-block; color:#ffffff; text-align:center; padding: 5px 25px;" *ngFor="let vehicle of vehicleList"> -->
-        <table style="color:#ffffff; text-align: left;">
+        <table style="color:#ffffff; width:100%; text-align: left;">
           <tr>
             <th>Vehicle</th>
-            <td *ngFor="let vehicle of vehicleList">{{vehicle.name}}</td>
+            <td style="text-align:center;" *ngFor="let vehicle of vehicleList"><img [src]="vehicleImage[vehicle.id]" width="120"/><br>{{vehicle.name}}</td>
           </tr>
           <tr>
             <th>Available Units of Vehicles of this type</th>
