added reset functionality on result page

--- a/src/app/components/findfalcon/findfalcon.component.html
+++ b/src/app/components/findfalcon/findfalcon.component.html
@@ -44,7 +44,7 @@
         <table style="color:#ffffff; width:100%;">
           <tr>
             <th>Planet</th>
-            <td *ngFor="let planet of planetList"><img [src]="planetImage[planet.id]" width="120"/><br>{{planet.name}}</td>
+            <td *ngFor="let planet of planetList"><img [src]="planetImage[planet.id]" height="140"/><br>{{planet.name}}</td>
           </tr>
           <tr>
             <th>Distance to Planet</th>
